# android-opencv

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
TestMakeLib/: build.gradle
TestMakeLib/src/androidTest/java/com/mind/make/: ExampleInstrumentedTest.kt
TestMakeLib/src/main/cpp/: CMakeLists.txt  my-native-lib.cpp
TestMakeLib/src/main/java/com/mind/make/: TestJni.kt
TestMakeLib/src/test/java/com/mind/make/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/com/mind/open/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  rknn_food.cc  rknn_food.h  yolo_image.cc
app/src/main/java/com/mind/open/: MainActivity.kt  RKnnJni.kt  RkCameraActivity.kt  SplashActivity.kt
app/src/main/java/com/mind/open/camera/: CameraHelper.java  CameraListener.java  PreviewData.java
app/src/main/java/com/mind/open/presenter/: RknnPresenter.java
app/src/main/java/com/mind/open/rga/: HALDefine.java  RGA.java
app/src/main/java/com/mind/open/rkcamera/: RkCameraActivity.kt  RkPresenter.kt
app/src/main/java/com/mind/open/rkcamera/controller/: CameraController.kt  ModelController.kt  RkComb.kt
app/src/main/java/com/mind/open/tracker/: ObjectTracker.java
app/src/main/java/com/mind/open/yolo/: FoodRegInfo.java  ImageBufferQueue.java  InferenceResult.java  InferenceWrapper.java  PostProcess.java
app/src/main/res/layout/: activity_main.xml  activity_rk_camera.xml  activity_splash.xml
app/src/main/res/raw/: model_epoch_v3.rknn
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mind/open/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
